[MOD] Testing Modification of Default Style for BeeSidebarLayout Component.

--- a/src/app/pages/home-page/home-page.html
+++ b/src/app/pages/home-page/home-page.html
@@ -1,11 +1,11 @@
-<bee-sidebar-layout [MaxWidth]="30" [MinWidth]="10">
+<bee-sidebar-layout class="custom-sidebar-1" [MaxWidth]="30" [MinWidth]="10">
   <div sidebar>
     <h3>Sidebar</h3>
     <p>Navigation or menu here.</p>
   </div>
 
   <div>
-    <h1>Beexy Docs</h1>
+    <h1>Beexy Docs - Home Page</h1>
     <p>This area grows or shrinks depending on sidebar width.</p>
   </div>
 </bee-sidebar-layout>
