--- a/src/app/pages/testing-page/testing-page.html
+++ b/src/app/pages/testing-page/testing-page.html
@@ -1,1 +1,11 @@
-<p>testing-page works!</p>
+<bee-sidebar-layout class="custom-sidebar-2" [MaxWidth]="20" [MinWidth]="5">
+  <div sidebar>
+    <h3>Sidebar</h3>
+    <p>Navigation or menu here.</p>
+  </div>
+
+  <div>
+    <h1>Beexy Docs - Testing Page</h1>
+    <p>This area grows or shrinks depending on sidebar width.</p>
+  </div>
+</bee-sidebar-layout>
