[MOD] Update testing new functionalities

--- a/src/app/pages/home-page/home-page.html
+++ b/src/app/pages/home-page/home-page.html
@@ -7,5 +7,6 @@
   <div>
     <h1>Beexy Docs - Home Page</h1>
     <p>This area grows or shrinks depending on sidebar width.</p>
+    <button (click)="ClickCollapse()">{{ CollapseButtonText() }}</button>
   </div>
 </bee-sidebar-layout>
