[MOD] Update features for BeeSidebarLayout: * Fixing Visual Effect when dragging, * Exposing Output with basic SidebarState information

--- a/src/app/new-beexy-components/bee-sidebar-layout/bee-sidebar-layout.html
+++ b/src/app/new-beexy-components/bee-sidebar-layout/bee-sidebar-layout.html
@@ -1,5 +1,5 @@
 <div class="bee-sidebar-layout">
-  <aside class="bee-sidebar" [style.width]="sidebarWidth">
+  <aside class="bee-sidebar" [class.no-transition]="isDragging" [style.width]="sidebarWidth">
     <ng-content select="[sidebar]" />
 
     <!-- Drag Handle -->
